--- a/Alien imageView 02/Base.lproj/Main.storyboard
+++ b/Alien imageView 02/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,68 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Alien_imageView_02" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b5t-zC-U2B">
+                                <rect key="frame" x="87" y="60" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="240" id="7At-Jo-60B"/>
+                                    <constraint firstAttribute="height" constant="240" id="J8b-bQ-llg"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="NmV-CK-J4r"/>
+                                    <constraint firstAttribute="width" constant="240" id="d7f-W0-9dQ"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="240" id="fgh-iZ-xsV"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="240" id="oEe-oX-Cvd"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="240" id="qxX-KC-Xb8"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ckg-OB-YYU">
+                                <rect key="frame" x="172" y="320" width="70" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="UdG-9K-b9J"/>
+                                    <constraint firstAttribute="height" constant="40" id="nDe-dD-azu"/>
+                                </constraints>
+                                <state key="normal" title="Update"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Qe-BS-tKs"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yN-5s-Rf0">
+                                <rect key="frame" x="167" y="380" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="27a-kX-4bH"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="xnY-ds-k1v"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="b5t-zC-U2B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0YH-df-Woi"/>
+                            <constraint firstItem="ckg-OB-YYU" firstAttribute="top" secondItem="b5t-zC-U2B" secondAttribute="bottom" constant="20" id="34y-7W-E3g"/>
+                            <constraint firstItem="b5t-zC-U2B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3e3-tA-avW"/>
+                            <constraint firstItem="b5t-zC-U2B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9Wd-e8-nOd"/>
+                            <constraint firstItem="b5t-zC-U2B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="Lw2-Xt-jby"/>
+                            <constraint firstItem="2yN-5s-Rf0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P1c-HL-uN1"/>
+                            <constraint firstItem="ckg-OB-YYU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="S66-ju-q6A"/>
+                            <constraint firstItem="2yN-5s-Rf0" firstAttribute="top" secondItem="ckg-OB-YYU" secondAttribute="bottom" constant="20" id="g5L-p3-jiW"/>
+                            <constraint firstItem="b5t-zC-U2B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="inP-xE-zQV"/>
+                            <constraint firstItem="b5t-zC-U2B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="s5B-Dv-zzn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="alienimageViewer" destination="b5t-zC-U2B" id="6bd-2P-QBp"/>
+                        <outlet property="countlabel" destination="2yN-5s-Rf0" id="zOr-zk-GBH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133.33333333333334" y="132.88043478260872"/>
         </scene>
     </scenes>
 </document>
